change music to Music

--- a/youtube.html
+++ b/youtube.html
@@ -64,7 +64,7 @@
     <div>Originals</div></div>
     <div class="sidebar-link">
       <img src="icons/youtube-music.svg">
-      <div>Youtube music</div> 
+      <div>Youtube Music</div> 
     </div>
 
   </div>
